fix(ui): fixed stuck player icon on the minimap and percentage counter

--- a/ui/src/components/helpers/PercentageCounter.scss
+++ b/ui/src/components/helpers/PercentageCounter.scss
@@ -44,7 +44,7 @@
     }
 
     .PercentageText {
-        width: 1.2vw;
+        width: 1.65vw;
         display: flex;
         align-items: center;
         justify-content: flex-end;
